# self

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  deny.toml  spec.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
npm/self/: README.md  package.json
scripts/: set-version.mjs
src/: cmd_doctor.rs  cmd_init.rs  cmd_status.rs  cmd_uninstall.rs  corpus.rs  error.rs  main.rs  markers.rs  paths.rs  registry.rs  runlog.rs  settings.rs  templates.rs
templates/: constitution.md  preamble.md
templates/agents/: SelfImproving.md  self-improvement.md  self-improver.md  self-learner.md  self-learning.md
templates/seed/: REGISTRY.md  observations.md  retired.md  runs.md
templates/seed/skills/ci-gate/: SKILL.md
tests/: integration_tests.rs
